# pytaskcli

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: core.py  utils.py
src/pytaskcli/: cli.py  core.py  db.py  main.py
tests/: test_cli.py  test_core.py  test_db.py  test_main.py
